--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
-html {
-    background-color: $bg-color;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  background-color: $bg-color;
 }
